Fix #426 Varous Part1 Steps Report Global and DS Response differences inaccurately