@@ -3,7 +3,9 @@
  */
 package org.etools.j1939_84.controllers.part1;
 
+import static org.etools.j1939_84.J1939_84.NL;
 import static org.etools.j1939_84.bus.j1939.packets.DM2PreviouslyActiveDTC.PGN;
+import static org.etools.j1939_84.model.Outcome.FAIL;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -13,9 +15,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Executor;
 import org.etools.j1939_84.bus.Either;
@@ -30,7 +29,6 @@ import org.etools.j1939_84.bus.j1939.packets.LampStatus;
 import org.etools.j1939_84.controllers.DataRepository;
 import org.etools.j1939_84.controllers.ResultsListener;
 import org.etools.j1939_84.controllers.TestResultsListener;
-import org.etools.j1939_84.model.Outcome;
 import org.etools.j1939_84.model.RequestResult;
 import org.etools.j1939_84.modules.BannerModule;
 import org.etools.j1939_84.modules.DTCModule;
@@ -86,7 +84,7 @@ public class Step16ControllerTest extends AbstractControllerTest {
     private VehicleInformationModule vehicleInformationModule;
 
     private RequestResult<DM2PreviouslyActiveDTC> requestResult(DM2PreviouslyActiveDTC packet1) {
-        return new RequestResult<>(false, Collections.singletonList(new Either<>(packet1, null)));
+        return new RequestResult<>(false, List.of(new Either<>(packet1, null)));
     }
 
     @Before
@@ -113,7 +111,6 @@ public class Step16ControllerTest extends AbstractControllerTest {
                                  bannerModule,
                                  vehicleInformationModule,
                                  mockListener,
-                                 reportFileModule,
                                  dtcModule);
     }
 
@@ -121,68 +118,39 @@ public class Step16ControllerTest extends AbstractControllerTest {
     @TestDoc(@TestItem(verifies = "6.1.16.2.a"))
     public void testDTCsNotEmpty() {
         DM2PreviouslyActiveDTC packet1 = mock(DM2PreviouslyActiveDTC.class);
+        Packet packet = mock(Packet.class);
+        when(packet.getBytes()).thenReturn(new byte[0]);
+        when(packet1.getPacket()).thenReturn(packet);
         DiagnosticTroubleCode dtc1 = mock(DiagnosticTroubleCode.class);
-        when(packet1.getDtcs()).thenReturn(Collections.singletonList(dtc1));
+        when(packet1.getDtcs()).thenReturn(List.of(dtc1));
         when(packet1.getSourceAddress()).thenReturn(0);
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
-        AcknowledgmentPacket packet3 = mock(AcknowledgmentPacket.class);
-        when(dtcModule.requestDM2(any(), eq(true))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(packet1), Collections.singletonList(packet3)));
 
-        // Set up the destination specific packets we will be returning when
-        // requested
-        when(dtcModule.requestDM2(any(), eq(true), eq(0)))
-                .thenReturn(new BusResult<>(false, packet1));
+        when(dtcModule.requestDM2(any(), eq(true))).thenReturn(new RequestResult<>(false, packet1));
+        when(dtcModule.requestDM2(any(), eq(true), eq(0))).thenReturn(new BusResult<>(false, packet1));
 
-        // add ACK/NACK packets to the listing for complete reality testing
-        when(dtcModule.requestDM2(any(), eq(true), eq(3)))
-                .thenReturn(new BusResult<>(false, packet3));
-
-        // Return the modules address so that we can do the destination specific
-        // calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>() {
-            {
-                add(0);
-                add(3);
-            }
-        };
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of(0));
 
         runTest();
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM2(any(), eq(true));
         verify(dtcModule).requestDM2(any(), eq(true), eq(0));
-        verify(dtcModule).requestDM2(any(), eq(true), eq(3));
 
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
+                                        FAIL,
                                         "6.1.16.2.a - OBD ECU reported a previously active DTC");
-        verify(mockListener).addOutcome(1,
-                                        16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.a - OBD ECU reported a previously active DTC");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
-
+        assertEquals("FAIL: 6.1.16.2.a - OBD ECU reported a previously active DTC" + NL, listener.getResults());
     }
 
     @Test
-    public void testGetDiplayName() {
+    public void testGetDisplayName() {
         assertEquals("Display Name", "Part 1 Step 16", instance.getDisplayName());
     }
 
@@ -198,12 +166,10 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(packet1.getSourceAddress()).thenReturn(0);
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OTHER);
         when(dtcModule.requestDM2(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
 
-        // Return the modules address so that we can do the destination specific
-        // calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>();
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        // Return the modules address so that we can do the destination specific calls
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of());
 
         runTest();
 
@@ -214,25 +180,12 @@ public class Step16ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
+                                        FAIL,
                                         "6.1.16.2.b - OBD ECU does not report MIL off");
-        verify(mockListener).addOutcome(1,
-                                        16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.a DS DM2 responses differ from global responses");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.b - OBD ECU does not report MIL off");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.a DS DM2 responses differ from global responses");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
+        assertEquals("FAIL: 6.1.16.2.b - OBD ECU does not report MIL off" + NL, listener.getResults());
     }
 
     @Test
@@ -244,11 +197,10 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
         AcknowledgmentPacket packet3 = mock(AcknowledgmentPacket.class);
         when(dtcModule.requestDM2(any(), eq(true))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(packet1), Collections.singletonList(packet3)));
+                new RequestResult<>(false, List.of(packet1), List.of(packet3)));
 
         // Return the modules address so that we can do the destination specific calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>();
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of());
 
         runTest();
 
@@ -256,16 +208,6 @@ public class Step16ControllerTest extends AbstractControllerTest {
         verify(dtcModule).requestDM2(any(), eq(true));
 
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
-
-        verify(mockListener).addOutcome(1,
-                                        16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.a DS DM2 responses differ from global responses");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.a DS DM2 responses differ from global responses");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
@@ -276,89 +218,57 @@ public class Step16ControllerTest extends AbstractControllerTest {
     @TestDoc({ @TestItem(verifies = "6.1.16.2.a,b") })
     public void testMILStatusNotOFF() {
         DM2PreviouslyActiveDTC packet1 = mock(DM2PreviouslyActiveDTC.class);
+        Packet packet = mock(Packet.class);
+        when(packet.getBytes()).thenReturn(new byte[0]);
+        when(packet1.getPacket()).thenReturn(packet);
         DiagnosticTroubleCode dtc = mock(DiagnosticTroubleCode.class);
-        when(packet1.getDtcs()).thenReturn(Collections.singletonList(dtc));
+        when(packet1.getDtcs()).thenReturn(List.of(dtc));
         when(packet1.getSourceAddress()).thenReturn(0);
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.SLOW_FLASH);
 
-        AcknowledgmentPacket packet3 = mock(AcknowledgmentPacket.class);
-        when(packet3.getResponse()).thenReturn(Response.NACK);
-        when(dtcModule.requestDM2(any(), eq(true))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(packet1), Collections.singletonList(packet3)));
+        when(dtcModule.requestDM2(any(), eq(true))).thenReturn(new RequestResult<>(false, packet1));
+        when(dtcModule.requestDM2(any(), eq(true), eq(0))).thenReturn(new BusResult<>(false, packet1));
 
-        // Set up the destination specific packets we will be returning when
-        // requested
-        when(dtcModule.requestDM2(any(), eq(true), eq(0)))
-                .thenReturn(new BusResult<>(false, packet1));
-
-        // add ACK/NACK packets to the listing for complete reality testing
-        when(dtcModule.requestDM2(any(), eq(true), eq(3)))
-                .thenReturn(new BusResult<>(false, packet3));
-
-        // Return the modules address so that we can do the destination specific
-        // calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>() {
-            {
-                add(0);
-                add(3);
-            }
-        };
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        // Return the modules address so that we can do the destination specific calls
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of(0));
 
         runTest();
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM2(any(), eq(true));
         verify(dtcModule).requestDM2(any(), eq(true), eq(0));
-        verify(dtcModule).requestDM2(any(), eq(true), eq(3));
 
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
+                                        FAIL,
                                         "6.1.16.2.a - OBD ECU reported a previously active DTC");
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
+                                        FAIL,
                                         "6.1.16.2.b - OBD ECU does not report MIL off");
-        verify(mockListener).addOutcome(1,
-                                        16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.a - OBD ECU reported a previously active DTC");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.b - OBD ECU does not report MIL off");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
+        String expected = "";
+        expected += "FAIL: 6.1.16.2.a - OBD ECU reported a previously active DTC" + NL;
+        expected += "FAIL: 6.1.16.2.b - OBD ECU does not report MIL off" + NL;
+        assertEquals(expected, listener.getResults());
     }
 
     @Test
     @TestDoc({ @TestItem(verifies = "6.1.16.4.a,b,c") })
     public void testNonOBDMilOn() {
         DM2PreviouslyActiveDTC packet1 = mock(DM2PreviouslyActiveDTC.class);
-        when(packet1.getDtcs()).thenReturn(Collections.emptyList());
+        when(packet1.getDtcs()).thenReturn(List.of());
         when(packet1.getSourceAddress()).thenReturn(0);
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.ON);
         when(dtcModule.requestDM2(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
 
-        // Return the modules address so that we can do the destination specific
-        // calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>();
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        // Return the modules address so that we can do the destination specific calls
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of());
 
         runTest();
 
@@ -369,33 +279,19 @@ public class Step16ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
+                                        FAIL,
                                         "6.1.16.2.b - OBD ECU does not report MIL off");
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
-                                        "6.1.16.2.c - non-OBD ECU does not report MIL off or not supported");
-        verify(mockListener).addOutcome(1,
-                                        16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.a DS DM2 responses differ from global responses");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.b - OBD ECU does not report MIL off");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.2.c - non-OBD ECU does not report MIL off or not supported");
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.a DS DM2 responses differ from global responses");
+                                        FAIL,
+                                        "6.1.16.2.c - Non-OBD ECU does not report MIL off or not supported");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
+        String expected = "";
+        expected += "FAIL: 6.1.16.2.b - OBD ECU does not report MIL off" + NL;
+        expected += "FAIL: 6.1.16.2.c - Non-OBD ECU does not report MIL off or not supported" + NL;
+        assertEquals(expected, listener.getResults());
     }
 
     @Test
@@ -421,12 +317,8 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(dtcModule.requestDM2(any(), eq(true), eq(3)))
                 .thenReturn(new BusResult<>(false, packet4));
 
-        // Return the modules address so that we can do the destination specific
-        // calls
-        List<Integer> obdAddressSet = new ArrayList<>();
-        obdAddressSet.add(0);
-        obdAddressSet.add(3);
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        // Return the modules address so that we can do the destination specific calls
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of(0, 3));
 
         runTest();
 
@@ -439,17 +331,14 @@ public class Step16ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.b Nack not received from OBD ECUs that did not respond to global query");
+                                        FAIL,
+                                        "6.1.16.4.b - OBD module Transmission #1 (3) did not provide a response to Global query and did not provide a NACK for the DS query");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
+        assertEquals(
+                "FAIL: 6.1.16.4.b - OBD module Transmission #1 (3) did not provide a response to Global query and did not provide a NACK for the DS query" + NL,
+                listener.getResults());
     }
 
     @Test
@@ -457,6 +346,9 @@ public class Step16ControllerTest extends AbstractControllerTest {
     public void testResponsesAreDifferent() {
 
         DM2PreviouslyActiveDTC packet1 = mock(DM2PreviouslyActiveDTC.class);
+        Packet packet1Packet = mock(Packet.class);
+        when(packet1Packet.getBytes()).thenReturn(new byte[0]);
+        when(packet1.getPacket()).thenReturn(packet1Packet);
         when(packet1.getSourceAddress()).thenReturn(0);
         when(packet1.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
@@ -464,12 +356,15 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(packet3.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
         when(packet3.getSourceAddress()).thenReturn(3);
         // global response
-        when(dtcModule.requestDM2(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Arrays.asList(packet1, packet3), Collections.emptyList()));
+        when(dtcModule.requestDM2(any(), eq(true))).thenReturn(new RequestResult<>(false, packet1, packet3));
 
-        // Set up the destination specific packets we will be returning when
-        // requested
+        // Set up the destination specific packets we will be returning when requested
         DM2PreviouslyActiveDTC packet2 = mock(DM2PreviouslyActiveDTC.class);
+        when(packet2.getSourceAddress()).thenReturn(0);
+        Packet packet2Packet = mock(Packet.class);
+        when(packet2Packet.getBytes()).thenReturn(new byte[] { 1 });
+        when(packet2.getPacket()).thenReturn(packet2Packet);
+
         when(dtcModule.requestDM2(any(), eq(true), eq(0)))
                 .thenReturn(new BusResult<>(false, packet2));
 
@@ -478,15 +373,8 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(dtcModule.requestDM2(any(), eq(true), eq(3)))
                 .thenReturn(new BusResult<>(false, packet4));
 
-        // Return the modules address so that we can do the destination specific
-        // calls
-        ArrayList<Integer> obdAddressSet = new ArrayList<>() {
-            {
-                add(0);
-                add(3);
-            }
-        };
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddressSet);
+        // Return the modules address so that we can do the destination specific calls
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of(0, 3));
 
         runTest();
 
@@ -499,17 +387,13 @@ public class Step16ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(1,
                                         16,
-                                        Outcome.FAIL,
-                                        "6.1.16.4.a DS DM2 responses differ from global responses");
-
-        verify(reportFileModule).addOutcome(1,
-                                            16,
-                                            Outcome.FAIL,
-                                            "6.1.16.4.a DS DM2 responses differ from global responses");
+                                        FAIL,
+                                        "6.1.16.4.a - Difference compared to data received during global request");
 
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        assertEquals("", listener.getResults());
+        assertEquals("FAIL: 6.1.16.4.a - Difference compared to data received during global request" + NL,
+                     listener.getResults());
     }
 
     @Test
@@ -518,10 +402,9 @@ public class Step16ControllerTest extends AbstractControllerTest {
         DM2PreviouslyActiveDTC packet1 = new DM2PreviouslyActiveDTC(
                 Packet.create(PGN, 0, new byte[] { 0x00, (byte) 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }));
         when(dtcModule.requestDM2(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
 
-        // Set up the destination specific packets we will be returning when
-        // requested
+        // Set up the destination specific packets we will be returning when requested
         DM2PreviouslyActiveDTC packet2 = new DM2PreviouslyActiveDTC(
                 Packet.create(PGN, 0, new byte[] { 0x00, (byte) 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }));
         when(dtcModule.requestDM2(any(), eq(true), eq(0))).thenReturn(new BusResult<>(false, packet2));
@@ -534,10 +417,7 @@ public class Step16ControllerTest extends AbstractControllerTest {
         when(dtcModule.requestDM2(any(), eq(true), eq(3)))
                 .thenReturn(new BusResult<>(false, packet4));
 
-        List<Integer> obdAddresses = new ArrayList<>();
-        obdAddresses.add(0);
-        obdAddresses.add(3);
-        when(dataRepository.getObdModuleAddresses()).thenReturn(obdAddresses);
+        when(dataRepository.getObdModuleAddresses()).thenReturn(List.of(0, 3));
 
         runTest();
 
